# my-algorithms-collection

./: CMakeLists.txt  eratosthenes sieve.cpp  euclidean_algorigthm.cpp  input.txt  libs.h  main.cpp  prototypes.h  swap.cpp
searches/: KMP.cpp  binary.cpp  fibonacci.cpp  interpolation.cpp  linear.cpp  trie.cpp
sorts/: heap.cpp  insertion.cpp  merge.cpp  quick.cpp  selection.cpp  shaker.cpp  shell.cpp
